# azprose

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.md  README.md  SECURITY.md  com.azprose.app.desktop  com.azprose.app.metainfo.xml  com.azprose.app.xml  index.html  opencode.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
.azprose/: config.json  session.json
.azprose/themes/: everforest-light.css  rose-pine-dawn.css  skarline-xcode-civic.css  skarline-xcode-low-key.css  skarline-xcode-presentation-darker.css  skarline-xcode-sunset.css
.claude/: settings.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feedback.yml
.github/workflows/: ci.yml  release.yml
agents/: arch_description.md  calendar_markdown.md
ai/: architecture_global.md  audit_2026-06.md  audit_projet.md  charte_graphique.md  charte_stylage.md  curated_themes.md  editeur_latex.md  editeur_typst.md  fonctions_opencode.md  gestion-projets.md  integration_latex.md  integration_typst.md  loading-mathjax-packages.md  migration-react-svelte.md  moteur_indexation.md  opencode-webview-folders.md  profiling-startup.md  projet_gestion.md  solution_de_presentation.md  themes_audit_plan.md  typst-integration.md  userprofile.md
docs/: auto-update.md  formats.md  index.md  prose-style.md  release-checklist.md
docs/release-notes/: v1.5.0.md  v1.5.1.md  v1.5.10.md  v1.5.11.md  v1.5.12.md  v1.5.13.md  v1.5.2.md  v1.5.5.md  v1.5.6.md  v1.5.7.md  v1.5.8.md  v1.5.9.md
examples/: test.typ
pkg/: .gitignore  PKGBUILD
scripts/: build-themes.mjs  gen-catalog.mjs  import-zed.mjs  marka
src/: app.css  app.svelte  app.tsx  main.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  lsp_bridge.rs  main.rs  mdprinter.rs  opencode.rs  terminal.rs
src-tauri/src/latex_engine/: mod.rs  synctex.rs
src-tauri/src/typst_backend/: mod.rs
src-tauri/src/typst_engine/: mod.rs
src/components/: index.ts
src/csv/: cache.ts  flush.ts  spreadsheet.ts
src/hooks/: index.ts  use-context-menu.ts  use-file-ops.ts  use-file-session.ts  use-file-watcher.ts  use-notifications.ts  use-overlays.ts  use-persisted-state.ts  use-scroll-memory.ts  use-selection-sync-text.ts  use-shortcuts.ts  use-sync-scroll.ts  use-update-flow.ts
src/latex/: build.ts  clean.ts  diagnostics.ts  index.ts  types.ts
src/lib/: app-events.ts  app-keyboard.ts  bundle.ts  close-handler.ts  command-search.ts  commands.ts  config-sync.ts  context-bundle.ts  crafted-catalog.json  crash-handler.ts  csv.ts  custom-themes.ts  demo.ts  diagnostics.ts  editor-general.svelte.ts  editor-languages.ts  editor-mode.ts  editor-view-registry.ts  file-operations.svelte.ts  files.ts  i18n.ts  i18n.tsx  icons.ts  index.ts  markdown-it-wikilinks.ts  markdown-render.ts  markdown-transclusion.ts  markdown.ts  marp-render.ts  mathjax-packages.ts  mermaid.ts  panel-manager.ts  panel-store.ts  paths-utils.ts  paths.ts  pdf-cache.ts  pdf-export.ts  plantuml.ts  platform.ts  project-config.ts  (+20 more)
src/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt-BR.json  zh.json
src/markdown/: index.ts  (+6 more)
test-latex/: test.aux  test.fdb_latexmk  test.fls  test.tex
tests/: command-search.test.ts  context-bundle.test.ts  csv-preview.test.ts  files.test.ts  panel-store.test.ts  pdf-export.test.ts  plantuml.test.ts  release-notes.test.ts
(+211 files in other folders)
