[package]
name = "azprose"
version = "0.1.0"
description = "AZprose — éditeur de texte scientifique"
authors = ["Sadik Boujaida <alijouahri61@gmail.com>", "Anthropic Claude <claude@anthropic.com>"]
edition = "2021"

[lib]
name = "azprose_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["typst"]
typst = [
    "dep:typst",
    "dep:typst-svg",
    "dep:typst-pdf",
    "dep:typst-layout",
    "dep:typst-kit",
    "typst-kit/embedded-fonts",
    "typst-kit/scan-fonts",
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "unstable"] }
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
typst = { version = "0.15", optional = true }
typst-svg = { version = "0.15", optional = true }
typst-pdf = { version = "0.15", optional = true }
typst-layout = { version = "0.15", optional = true }
typst-kit = { version = "0.15", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.7"

[target.'cfg(unix)'.dependencies]
portable-pty = "0.9"

[dev-dependencies]
futures = "0.3"
